[gd_scene load_steps=4 format=3 uid="uid://oablrd64prxa"]

[ext_resource type="Script" uid="uid://ec2d2rg8dqat" path="res://entities/level_entities/safe_zone/safe_zone.gd" id="1_xp0kp"]
[ext_resource type="Texture2D" uid="uid://bvn57v0e2hr5x" path="res://entities/level_entities/safe_zone/art/safe zone.png" id="2_8tqmy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8tqmy"]
size = Vector2(292, 292)

[node name="SafeZone" type="Area2D" groups=["safe_zone"]]
process_mode = 1
scale = Vector2(0.778, 0.778)
script = ExtResource("1_xp0kp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8tqmy")

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("2_8tqmy")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
